fixed widget-nav alignment and default iframe border causing sizing issue

--- a/client/src/app/components/App/MainToolbar/InsertToolbar/insertToolbar.scss
+++ b/client/src/app/components/App/MainToolbar/InsertToolbar/insertToolbar.scss
@@ -66,6 +66,8 @@
     width: fit-content;
     margin: 0;
     padding: 0;
+    position: relative;
+    z-index: 1;
   }
   &__list-item {
     padding: $small-padding;
